Fixed SAB REST test. Part of #233